Fix issue of footer content alignment at 992px
Due to the bootstrap grid system breakpoint max-width not including the stated max-width
whereas the local media queries does.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,7 +459,7 @@ footer {
 }
 
 /*-------------------------------Footer (All Sections): Mobile & Responsive*/
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
     .footer-content {
         margin-top: 50px; 
     }
